example/lib/src/generated/errors/errors_localization_nl.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Dutch Flemish (`nl`).
class ErrorsLocalizationNl extends ErrorsLocalization {
  ErrorsLocalizationNl([String locale = 'nl']) : super(locale);

  @override
  String get error => 'Er is een fout opgetreden';

  @override
  String get unexpectedError => 'Er is een onverwachte fout opgetreden';

  @override
  String get bugReportSentText => 'Bugrapport succesvol verzonden.';
}
